update image paths

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="projectsContainer">
             <div class="projectTab">
                 <div class="projectTop">
-                    <img src="/pictures/gamehubimg.png" alt="">
+                    <img src="./pictures/gamehubimg.png" alt="">
                 </div>
                 <div class="projectBottom">
                     <div class="description">
@@ -116,7 +116,7 @@
             </div>
             <div class="projectTab">
                 <div class="projectTop">
-                    <img src="/pictures/gamehubimg.png" alt="">
+                    <img src="./pictures/gamehubimg.png" alt="">
                 </div>
                 <div class="projectBottom">
                     <div class="description">
@@ -131,7 +131,7 @@
             </div>
             <div class="projectTab">
                 <div class="projectTop">
-                    <img src="/pictures/gamehubimg.png" alt="">
+                    <img src="./pictures/gamehubimg.png" alt="">
                 </div>
                 <div class="projectBottom">
                     <div class="description">
@@ -146,7 +146,7 @@
             </div>
         <div class="projectTab">
             <div class="projectTop">
-                <img src="/pictures/gamehubimg.png" alt="">
+                <img src="./pictures/gamehubimg.png" alt="">
             </div>
             <div class="projectBottom">
                 <div class="description">
@@ -161,7 +161,7 @@
         </div>
         <div class="projectTab">
             <div class="projectTop">
-                <img src="/pictures/gamehubimg.png" alt="">
+                <img src="./pictures/gamehubimg.png" alt="">
             </div>
             <div class="projectBottom">
                 <div class="description">
@@ -176,7 +176,7 @@
         </div>
         <div class="projectTab">
             <div class="projectTop">
-                <img src="/pictures/gamehubimg.png" alt="">
+                <img src="./pictures/gamehubimg.png" alt="">
             </div>
             <div class="projectBottom">
                 <div class="description">
