added footer + contact

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Geologica:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
@@ -17,7 +18,7 @@
             <a href="#about">About me</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <a href="" id="contactBtn">Contact me</a>
+            <a href="#contact" id="contactBtn">Contact me</a>
         </ul>
     </header>
     <section class="home">
@@ -31,7 +32,7 @@
                 </div>
             </div>
             <div class="image">
-
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/2048px-Circle-icons-profile.svg.png" alt="">
             </div>
         </div>
     </section>
@@ -97,7 +98,7 @@
             </div>
     </section>
     <section class="projects" id="projects">
-        <h1>My Projects</h1>
+        <h1 class="title">My Projects</h1>
         <div class="projectsContainer">
             <div class="projectTab">
                 <div class="projectTop">
@@ -109,40 +110,40 @@
                         <p>I tried to create website like G2A.com and Eneba.com for selling Games CD keys. Users can create accounts and log with them. After log in they can add favourite games or click on different games and check their price, description and etc.</p>
                     </div>
                     <div class="technologies">
-                        <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET, JWT, MSSQL</p>
+                        <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET - Restful API, JWT, MSSQL</p>
                     </div>
                 </div>
                 <a href="https://github.com/David-Popov/GameHub-Project">Source Code</a>
             </div>
             <div class="projectTab">
                 <div class="projectTop">
-                    <img src="./pictures/gamehubimg.png" alt="">
+                    <img src="./pictures/graphicredactorimg.png" alt="">
                 </div>
                 <div class="projectBottom">
                     <div class="description">
-                        <h1>GameHub</h1>
-                        <p>I tried to create website like G2A.com and Eneba.com for selling Games CD keys. Users can create accounts and log with them. After log in they can add favourite games or click on different games and check their price, description and etc.</p>
+                        <h1>Graphic Redactor</h1>
+                        <p>The graphics editor was assigned to me as a coursework in the subject of object-oriented programming. It's like a simple version of paint. The principles of OOP and C# Windows Form Application were used for its development.</p>
                     </div>
                     <div class="technologies">
-                        <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET, JWT, MSSQL</p>
+                        <p><span>Tech Used:</span> C# - Windows Forms Application, OOP Principles</p>
                     </div>
                 </div>
-                <a href="https://github.com/David-Popov/GameHub-Project">Source Code</a>
+                <a href="https://github.com/David-Popov/GraphicRedactor">Source Code</a>
             </div>
             <div class="projectTab">
                 <div class="projectTop">
-                    <img src="./pictures/gamehubimg.png" alt="">
+                    <img src="./pictures/youtubedownloaderimg.png" alt="">
                 </div>
                 <div class="projectBottom">
                     <div class="description">
-                        <h1>GameHub</h1>
-                        <p>I tried to create website like G2A.com and Eneba.com for selling Games CD keys. Users can create accounts and log with them. After log in they can add favourite games or click on different games and check their price, description and etc.</p>
+                        <h1>YouTube Downloader</h1>
+                        <p>Youtube Downloader is a simple console app which allows us to download playlists, videos, audio or video + audio up to 720p. I build it with C# Nugget package called "YoutubeExplode".</p>
                     </div>
                     <div class="technologies">
-                        <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET, JWT, MSSQL</p>
+                        <p><span>Tech Used:</span> C# - Console App, YoutubeExplode - Library</p>
                     </div>
                 </div>
-                <a href="https://github.com/David-Popov/GameHub-Project">Source Code</a>
+                <a href="https://github.com/David-Popov/Simple-YoutubeDownloader">Source Code</a>
             </div>
         <div class="projectTab">
             <div class="projectTop">
@@ -150,14 +151,14 @@
             </div>
             <div class="projectBottom">
                 <div class="description">
-                    <h1>GameHub</h1>
-                    <p>I tried to create website like G2A.com and Eneba.com for selling Games CD keys. Users can create accounts and log with them. After log in they can add favourite games or click on different games and check their price, description and etc.</p>
+                    <h1>Guess Game</h1>
+                    <p>Simple Guess Game which generates a random number from 0 to 20 and the user have 5 tries to guess it.</p>
                 </div>
                 <div class="technologies">
-                    <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET, JWT, MSSQL</p>
+                    <p><span>Tech Used:</span> HTML, CSS ,JavaScript</p>
                 </div>
             </div>
-            <a href="https://github.com/David-Popov/GameHub-Project">Source Code</a>
+            <a href="https://github.com/David-Popov/Guess-Game-JS">Source Code</a>
         </div>
         <div class="projectTab">
             <div class="projectTop">
@@ -191,5 +192,25 @@
         </div>
     </div>
     </section>
+    <section class="contactContainer" id="contact">
+        <h1>Contact me</h1>
+        <div class="contacts">
+            <div class="contactBox">
+                <img src="./pictures/email.png" alt="">
+                <a href="">Email</a>
+            </div>
+            <div class="contactBox">
+                <img src="./pictures/github.png" alt="">
+                <a href="https://github.com/David-Popov">Github</a>
+            </div>
+            <div class="contactBox">
+                <img src="./pictures/linkedin.png" alt="">
+                <a href="https://www.linkedin.com/in/david-popov-5aa684273/">Linkedin</a>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <span>Deivid-Popov@2023</span>
+    </footer>
 </body>
 </html>
