projects updated + added new images and links

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
         <div class="projectTab">
             <div class="projectTop">
-                <img src="./pictures/gamehubimg.png" alt="">
+                <img src="./pictures/guessgameimg.png" alt="">
             </div>
             <div class="projectBottom">
                 <div class="description">
@@ -162,33 +162,33 @@
         </div>
         <div class="projectTab">
             <div class="projectTop">
-                <img src="./pictures/gamehubimg.png" alt="">
+                <img src="./pictures/movieEngine.png" alt="">
             </div>
             <div class="projectBottom">
                 <div class="description">
-                    <h1>GameHub</h1>
-                    <p>I tried to create website like G2A.com and Eneba.com for selling Games CD keys. Users can create accounts and log with them. After log in they can add favourite games or click on different games and check their price, description and etc.</p>
+                    <h1>Movie Search Engine</h1>
+                    <p>Made simple search engine with react hooks and movie API</p>
                 </div>
                 <div class="technologies">
-                    <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET, JWT, MSSQL</p>
+                    <p><span>Tech Used:</span> HTML, CSS, JavaScript, ReactJS</p>
                 </div>
             </div>
-            <a href="https://github.com/David-Popov/GameHub-Project">Source Code</a>
+            <a href="https://github.com/David-Popov/React-Movie-Search-Engine">Source Code</a>
         </div>
         <div class="projectTab">
             <div class="projectTop">
-                <img src="./pictures/gamehubimg.png" alt="">
+                <img src="./pictures/weatherApp.png" alt="">
             </div>
             <div class="projectBottom">
                 <div class="description">
-                    <h1>GameHub</h1>
-                    <p>I tried to create website like G2A.com and Eneba.com for selling Games CD keys. Users can create accounts and log with them. After log in they can add favourite games or click on different games and check their price, description and etc.</p>
+                    <h1>Weather App</h1>
+                    <p>This Weather App is created with React and Weather API. In the input box user can type different city names. It shows degrees, humadity, country and etc.</p>
                 </div>
                 <div class="technologies">
-                    <p><span>Tech Used:</span> Angular, TypeScript, JavaScript, C# ASP.NET, JWT, MSSQL</p>
+                    <p><span>Tech Used:</span> JavaScript, ReactJS, Weather API</p>
                 </div>
             </div>
-            <a href="https://github.com/David-Popov/GameHub-Project">Source Code</a>
+            <a href="https://github.com/David-Popov/Weather-App-React">Source Code</a>
         </div>
     </div>
     </section>
